# crud_order_product

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 1e497f15569b_initial_tables.py
src/application/containers/: container.py  modules.py
src/application/services/: order.py  product.py
src/application/use_cases/: intarface.py  order.py  product.py
src/domain/: mapper.py
src/domain/dtos/: order.py  order_item.py  product.py
src/domain/repositories/: order_intarface.py  product_intarface.py
src/domain/services/: order.py  product.py
src/domain/value_objects/: currency.py  order_status.py  product_category.py
src/infrastructure/database/connect/: intarface.py  sqlite.py
src/infrastructure/database/models/: base.py  order.py  order_item.py  product.py
src/infrastructure/mappers/: order_mapper.py  product_mapper.py
src/infrastructure/repositories/order/: in_memory.py  sqlalchemy.py
src/infrastructure/repositories/product/: in_memory.py  sqlalchemy.py
src/presentation/api/: middlewares.py
src/presentation/api/v1/: main.py
src/presentation/api/v1/routers/: order.py  product.py
src/presentation/api/v1/schemas/requests/: order.py  product.py
src/presentation/api/v2/: main.py
src/presentation/api/v2/routers/: order.py  product.py
src/presentation/api/v2/schemas/requests/: order.py
src/presentation/api/v2/schemas/responses/: order.py  product.py
src/utils/: config.py  exceptions.py
